Update application files: add email templates and documentation routes, update helpers and other core files

--- a/templates/base.html
+++ b/templates/base.html
@@ -133,6 +133,10 @@
                     <a class="nav-link" href="{{ url_for('attendance.index') }}">
                         <i class="fas fa-clipboard-list"></i> Attendance
                     </a>
+                    <!-- Documentation -->
+                    <a class="nav-link" href="{{ url_for('documentation.index') }}">
+                        <i class="fas fa-book"></i> Documentation
+                    </a>
                     {% if current_user.is_admin() %}
                     <div class="sb-sidenav-menu-heading">Admin</div>
                     <a class="nav-link" href="{{ url_for('dashboard.users') }}">
